add image of finished recipe

--- a/recipes/green-curry.html
+++ b/recipes/green-curry.html
@@ -8,5 +8,25 @@
 </head>
 <body>
     <h1>Green Curry</h1>
+    <img src="../images/green-curry-image.jpg" alt="green curry">
+    <h3>Description</h3>
+    <p>Green curry is a delicious traditionally Thai or Thai-inspired dish. I like my curry to be very spicy and served with white rice. Vegetables in the recipe are interchangeable per your own preferences.</p>
+    <h2>Ingredients</h2>
+        <ul>
+        <li>4-6 T green curry paste</li>
+        <li>2 garlic cloves</li>
+        <li>2t fresh ginger</li>
+        <li>1t lemongrass paste</li>
+        <li>2T vegetable oil</li>
+        <li>1 cup chicken broth</li>
+        <li>1 can coconut milk</li>
+        <li>1T fish sauce</li>
+        <li>6 kaffir lime leaves</li>
+        <li>12 oz chicken thighs</li>
+        <li>1.5 cups snow peas</li>
+        <li>1 cup chopped broccoli</li>
+        <li>juice 1/2 lime</li>
+        </ul>
+        
 </body>
 </html>
