--- a/recipes/green-curry.html
+++ b/recipes/green-curry.html
@@ -20,13 +20,26 @@
         <li>2T vegetable oil</li>
         <li>1 cup chicken broth</li>
         <li>1 can coconut milk</li>
-        <li>1T fish sauce</li>
+        <li>1T sugar</li>
+        <li>pinch salt</li>
         <li>6 kaffir lime leaves</li>
         <li>12 oz chicken thighs</li>
         <li>1.5 cups snow peas</li>
         <li>1 cup chopped broccoli</li>
         <li>juice 1/2 lime</li>
         </ul>
-        
-</body>
+    <h2>Steps</h2>
+        <ol>
+            <li>Heat oil in large skillet</li>
+            <li>Add curry paste, lemongrass paste, garlic, and ginger and sautee until it "dries out"</li>
+            <li>Add chicken broth and coconut milk to dissolve paste</li>
+            <li>Add fish sauce, sugar, and salt</li>
+            <li>Add kaffir lime leaves, then bring sauce to a simmer</li>
+            <li>Add chicken, stir, then continue to simmer</li>
+            <li>Add broccoli, cook until almost desired texture, then add snow peas. Cook until desired texture.</li>
+            <li>Stir in basil and lime juice, remove from heat</li>
+            <li>Serve with rice.</li>
+        </ol>
+
+    </body>
 </html>
