Edit index.html and create Healthier Burger Helper recipe page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="green-curry.html"> Green Curry Recipe</a>
+    <ul>
+        <li><a href="green-curry.html"> Green Curry Recipe</a></li>
+        <li><a href="healthier-burger-helper.html"</li>
+    </ul>
+
 </body>
 </html>
