Add body text, update ingredients list

--- a/recipes/healthier-burger-helper.html
+++ b/recipes/healthier-burger-helper.html
@@ -8,5 +8,31 @@
 </head>
 <body>
     <h1>Healthier Burger Helper</h1>
+    <img src="../images/green-curry-image.jpg" alt="green curry">
+    <h3>Description</h3>
+    <p>"Healthier Burger Helper" is an iteration of the commercial Hamburger Helper boxed meal, for my picky husband, but safe for me to eat (as someone with food allergies).</p>
+    <h2>Ingredients</h2>
+        <ul>
+        <li>1 box banza pasta (I like elbows or cappavati shapes)</li>
+        <li>1lb organic grass-fed ground beef</li>
+        <li>2 cups shredded sharp cheddar cheese</li>
+        <li>1.5 cups Pacific Foods red pepper & tomato soup</li>
+        <li>2T italian seasoning</li>
+        <li>1T chili powder</li>
+        <li>1T garlic powder</li>
+        <li>salt, pepper, and red pepper flakes to taste</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Heat oil in large skillet</li>
+            <li>Add curry paste, lemongrass paste, garlic, and ginger and sautee until it "dries out"</li>
+            <li>Add chicken broth and coconut milk to dissolve paste</li>
+            <li>Add fish sauce, sugar, and salt</li>
+            <li>Add kaffir lime leaves, then bring sauce to a simmer</li>
+            <li>Add chicken, stir, then continue to simmer</li>
+            <li>Add broccoli, cook until almost desired texture, then add snow peas. Cook until desired texture.</li>
+            <li>Stir in basil and lime juice, remove from heat</li>
+            <li>Serve with rice.</li>
+        </ol>
 </body>
 </html>
