--- a/recipes/healthier-burger-helper.html
+++ b/recipes/healthier-burger-helper.html
@@ -24,15 +24,12 @@
         </ul>
     <h2>Steps</h2>
         <ol>
-            <li>Heat oil in large skillet</li>
-            <li>Add curry paste, lemongrass paste, garlic, and ginger and sautee until it "dries out"</li>
-            <li>Add chicken broth and coconut milk to dissolve paste</li>
-            <li>Add fish sauce, sugar, and salt</li>
-            <li>Add kaffir lime leaves, then bring sauce to a simmer</li>
-            <li>Add chicken, stir, then continue to simmer</li>
-            <li>Add broccoli, cook until almost desired texture, then add snow peas. Cook until desired texture.</li>
-            <li>Stir in basil and lime juice, remove from heat</li>
-            <li>Serve with rice.</li>
+            <li>Brown ground beef in skillet with chili powder, salt, pepper, and half the other seasonings</li>
+            <li>In a large pot, while beef is browning, boil pasta until al dente</li>
+            <li>Drain pasta when al dente</li>
+            <li>Combine drained pasta, Pacific Foods soup, ground beef, remaining seasonings and cheese</li>
+            <li>Warm/combine over low heat until cheese is melted and sauce is thickened</li>
+            <li>Serve with vegetable of choice: steamed broccoli, peas, etc.</li>
         </ol>
 </body>
 </html>
