edit body, ingredients, Steps

--- a/recipes/popcorn.html
+++ b/recipes/popcorn.html
@@ -7,6 +7,20 @@
     <title>Popcorn</title>
 </head>
 <body>
-    
+    <h1>Healthier Burger Helper</h1>
+    <img src="../images/healthier-burger-helper.jpg" alt="green curry">
+    <h3>Description</h3>
+    <p>The popcorn recipe is the simplest thing I could think of to finish the HTML portion of this assignment and move on to working with CSS. I'm snarky sometimes.</p>
+    <h2>Ingredients</h2>
+        <ul>
+        <li>1 bag of microwave popcorn</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Remove plastic from popcorn bag</li>
+            <li>Place popcorn bag in microwave, "this side facing up" facing, well, up</li>
+            <li>Cook in microwave for approximately 2.5 minutes, or until popcorn pops begin to slow</li>
+            <li>Try not to immediately burn your mouth on hot kernels.</li>
+        </ol>
 </body>
 </html>
