Change image, edit alt tag

--- a/recipes/popcorn.html
+++ b/recipes/popcorn.html
@@ -7,8 +7,8 @@
     <title>Popcorn</title>
 </head>
 <body>
-    <h1>Healthier Burger Helper</h1>
-    <img src="../images/healthier-burger-helper.jpg" alt="green curry">
+    <h1>Popcorn</h1>
+    <img src="../images/popcorn" alt="popcorn">
     <h3>Description</h3>
     <p>The popcorn recipe is the simplest thing I could think of to finish the HTML portion of this assignment and move on to working with CSS. I'm snarky sometimes.</p>
     <h2>Ingredients</h2>
