--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="green-curry.html"> Green Curry</a></li>
-        <li><a href="healthier-burger-helper.html">Healthier Burger Helper</a></li>
-        <li><a href="popcorn.html">Popcorn</a></li>
+        <li><a href="recipes/green-curry.html"> Green Curry</a></li>
+        <li><a href="recipes/healthier-burger-helper.html">Healthier Burger Helper</a></li>
+        <li><a href="recipes/popcorn.html">Popcorn</a></li>
     </ul>
 
 </body>
