fix popcorn img, add .jpg

--- a/recipes/popcorn.html
+++ b/recipes/popcorn.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Popcorn</h1>
-    <img src="../images/popcorn" alt="popcorn">
+    <img src="../images/popcorn.jpg" alt="popcorn">
     <h3>Description</h3>
     <p>The popcorn recipe is the simplest thing I could think of to finish the HTML portion of this assignment and move on to working with CSS. I'm snarky sometimes.</p>
     <h2>Ingredients</h2>
