--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="indexClass">Odin Recipes</h1>
+    <div class="listContainer">
     <ul>
         <li><a href="recipes/green-curry.html"> Green Curry</a></li>
         <li><a href="recipes/healthier-burger-helper.html">Healthier Burger Helper</a></li>
         <li><a href="recipes/popcorn.html">Popcorn</a></li>
-    </ul>
+    </ul></div>
 
 </body>
 </html>
